--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^2.2.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-validator": "^5.3.0",
+    "install": "^0.13.0",
+    "mongoose": "^5.13.23",
+    "multer": "^2.0.2",
+    "npm": "^11.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
