--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
+    "express-graphql": "^0.12.0",
     "express-validator": "^5.3.0",
+    "graphql": "^16.11.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.23",
