--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^5.13.23",
     "multer": "^2.0.2",
     "npm": "^11.6.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
